# esp-idf

components/drivers/: CMakeLists.txt  HD44780.c  esp32_i2c.cpp  esp_buttons.cpp  esp_encoder.cpp  esp_stepper.cpp  ltc6804.c
components/drivers/include/: esp32_i2c.h  esp32_timer.h  esp_buttons.h  esp_encoder.h  esp_stepper.h  ltc6804.h  step_motor.h
components/include/: FreeRTOS_abstract.h  generic.h  log.h
components/ota/: CMakeLists.txt  ota.c
components/ota/include/: ota.h
components/remote_logger/: CMakeLists.txt  logger.c
components/remote_logger/include/: logger.h
components/wifi/: wifi.c
components/wifi/include/: wifi.h
